verify the strength of a password

--- a/src/main/resources/noyl/themes/FlatLaf.properties
+++ b/src/main/resources/noyl/themes/FlatLaf.properties
@@ -1,6 +1,7 @@
 TitlePane.unifiedBackground=false
 TitlePane.buttonSize=40,30
 @accentColor=#44406
+@contactColor=#2596be
 
 Component.focusWidth=1
 Component.arc=10
