--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,13 @@
             <version>2.10.1</version>
         </dependency>
 
+
+            <dependency>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>2.8.9</version> <!-- Use the latest version available -->
+            </dependency>
+
     </dependencies>
 
 </project>
